--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
         <div class="container">
             <div class="container">
                 <!-- fb login area -->
+                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
             </div>
         </div>
 
@@ -32,5 +33,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="assets/js/bootstrap.min.js"></script>
+        <script src="js/facebook-login.js"></script>
     </body>
 </html>
