--- a/login.html
+++ b/login.html
@@ -33,6 +33,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="assets/js/bootstrap.min.js"></script>
-        <script src="js/facebook-login.js"></script>
+        <script src="assets/js/facebook-login.js"></script>
     </body>
 </html>
