--- a/home.html
+++ b/home.html
@@ -34,6 +34,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="assets/js/bootstrap.min.js"></script>
+        <!-- Facebook -->
+        <script src="http://connect.facebook.net/en_US/sdk.js"></script>
         <script src="assets/js/check-facebook-login.js"></script>
     </body>
 </html>
