--- a/home.html
+++ b/home.html
@@ -27,6 +27,7 @@
                 <h2 class="form-search-heading text-center">Search for places</h2>
                 <label for="inputStablishment" class="sr-only">Stablishment</label>
                 <input type="text" id="inputStablishment" class="form-control" placeholder="type here" required autofocus>
+                <button id="submitter" type="button" class="btn btn-default">Go!</button>
             </form>
         </div>
 
@@ -37,5 +38,7 @@
         <!-- Facebook -->
         <script src="http://connect.facebook.net/en_US/sdk.js"></script>
         <script src="assets/js/check-facebook-login.js"></script>
+        <!-- Form Treatment -->
+        <script src="assets/js/search-sender.js"></script>
     </body>
 </html>
