--- a/list.html
+++ b/list.html
@@ -23,17 +23,19 @@
         <h1 class="text-center">Q</h1>
 
         <div class="container">
-            {{#list results}}
+            <div>
                 <div class="row text-center show">
                     <div class="col-md-4"><img src="{{pageImage}}" alt="pageImage" class="img-rounded img-responsive"></div>
                 <div class="col-md-8">{{pageName}}</div>
             </div>
-            {{/list}}
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="assets/js/bootstrap.min.js"></script>
+
+        <!-- Searcher -->
+        <script src="assets/js/search-getter.js"></script>
     </body>
 </html>
