--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <h1 class="text-center">Q</h1>
 
         <div class="container">
-            <form class="form-search">
+            <form class="form-search" id="search-form">
                 <h2 class="form-search-heading text-center">Search for places</h2>
                 <label for="inputStablishment" class="sr-only">Stablishment</label>
                 <input type="text" id="inputStablishment" class="form-control" placeholder="type here" required autofocus>
