Mudando tipo de submit pro obvio padrao ne caceta

--- a/home.html
+++ b/home.html
@@ -23,10 +23,10 @@
         <h1 class="text-center">Q</h1>
 
         <div class="container">
-            <form class="form-search" id="search-form">
+            <form class="form-search" action="list.html" method="get">
                 <h2 class="form-search-heading text-center">Search for places</h2>
-                <label for="inputStablishment" class="sr-only">Stablishment</label>
-                <input type="text" id="inputStablishment" class="form-control" placeholder="type here" required autofocus>
+                <label for="query" class="sr-only">Stablishment</label>
+                <input type="text" id="query" class="form-control" placeholder="type here" required autofocus>
                 <button id="submitter" type="button" class="btn btn-default">Go!</button>
             </form>
         </div>
@@ -38,7 +38,5 @@
         <!-- Facebook -->
         <script src="http://connect.facebook.net/en_US/sdk.js"></script>
         <script src="assets/js/check-facebook-login.js"></script>
-        <!-- Form Treatment -->
-        <script src="assets/js/search-sender.js"></script>
     </body>
 </html>
