Form e name no html

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
             <form class="form-search" action="list.html" method="get">
                 <h2 class="form-search-heading text-center">Search for places</h2>
                 <label for="query" class="sr-only">Stablishment</label>
-                <input type="text" id="query" class="form-control" placeholder="type here" required autofocus>
+                <input type="text" name="query" class="form-control" placeholder="type here" required autofocus>
                 <button id="submitter" type="button" class="btn btn-default">Go!</button>
             </form>
         </div>
