--- a/login.html
+++ b/login.html
@@ -34,5 +34,6 @@
         <!-- Facebook -->
         <script src="http://connect.facebook.net/en_US/sdk.js"></script>
         <script src="assets/js/facebook-login.js"></script>
+        <script src="assets/js/facebook-caller.js"></script>
     </body>
 </html>
