--- a/home.html
+++ b/home.html
@@ -38,5 +38,6 @@
         <!-- Facebook -->
         <script src="http://connect.facebook.net/en_US/sdk.js"></script>
         <script src="assets/js/check-facebook-login.js"></script>
+        <script src="assets/js/facebook-caller.js"></script>
     </body>
 </html>
