comentarios produtivos tipo os do victor

--- a/list.html
+++ b/list.html
@@ -20,14 +20,15 @@
         <![endif]-->
     </head>
     <body>
-        <h1 class="text-center">Q</h1>
+        <img class="center-block" src="assets/img/queue120.png">
 
-        <div class="container">
-            <div>
-                <div class="row text-center show">
-                    <div class="col-md-4"><img src="{{pageImage}}" alt="pageImage" class="img-rounded img-responsive"></div>
-                <div class="col-md-8">{{pageName}}</div>
-            </div>
+        <div class="container show">
+            <table class="table table-striped">
+                <tr>
+                    <td class="col-md-4">img url</td>
+                    <td class="col-md-8">nome do treco</td>
+                </tr>
+            </table>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
