--- a/login.html
+++ b/login.html
@@ -20,11 +20,11 @@
         <![endif]-->
     </head>
     <body>
-        <h1 class="text-center">Q</h1>
+        <img class="center-block" src="assets/img/queue120.png">
 
         <div class="container">
             <!-- fb login area -->
-            <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+            <fb:login-button scope="public_profile,email" onlogin="checkLoginState();" class="center-block"></fb:login-button>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
