--- a/place.html
+++ b/place.html
@@ -20,7 +20,7 @@
         <![endif]-->
     </head>
     <body>
-        <h1 class="text-center">Q</h1>
+        <img class="center-block" src="assets/img/queue120.png">
 
         <div class="container">
             <div class="row text-center show">
