--- a/list.html
+++ b/list.html
@@ -23,14 +23,14 @@
         <img class="center-block" src="assets/img/queue120.png">
 
         <div class="container show">
-            <table class="table table-striped">
-                <tr>
-                    <td class="col-md-4">img url</td>
-                    <td class="col-md-8">nome do treco</td>
-                </tr>
-            </table>
+            <div class="table table-striped">
+                <div class="row">
+                    <div class="col-md-4">img url</div>
+                    <div class="col-md-8">nome do treco</div>
+                </div>
+            </div>
         </div>
-        
+
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
