--- a/login.html
+++ b/login.html
@@ -22,9 +22,9 @@
     <body>
         <img class="center-block" src="assets/img/queue120.png">
 
-        <div class="container">
+        <div class="container center-block">
             <!-- fb login area -->
-            <fb:login-button scope="public_profile,email" onlogin="checkLoginState();" class="center-block"></fb:login-button>
+            <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
