arrumando botao go

--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
                 <h2 class="form-search-heading text-center">Search for places</h2>
                 <label for="query" class="sr-only">Stablishment</label>
                 <input type="text" name="query" class="form-control" placeholder="type here" required autofocus>
-                <button id="submitter" type="button" class="btn btn-primary center-block botao">Go!</button>
+                <button id="submitter" type="submit" class="btn btn-primary center-block botao">Go!</button>
             </form>
         </div>
 
