--- a/login.html
+++ b/login.html
@@ -35,5 +35,11 @@
         <script src="assets/js/facebook-caller.js"></script>
         <script src="http://connect.facebook.net/en_US/sdk.js"></script>
         <script src="assets/js/facebook-login.js"></script>
+
+        <script>
+            window.fbAsyncInit = function () {
+                facebookLogin();
+            };
+        </script>
     </body>
 </html>
