--- a/home.html
+++ b/home.html
@@ -39,5 +39,11 @@
         <script src="assets/js/facebook-caller.js"></script>
         <script src="http://connect.facebook.net/en_US/sdk.js"></script>
         <script src="assets/js/check-facebook-login.js"></script>
+
+        <script>
+            window.fbAsyncInit = function () {
+                checkFacebookLogin();
+            };
+        </script>
     </body>
 </html>
