--- a/list.html
+++ b/list.html
@@ -37,11 +37,16 @@
         <script src="assets/js/bootstrap.min.js"></script>
 
         <!-- Facebook -->
-        <script src="assets/js/facebook-caller.js"></script>
         <script src="http://connect.facebook.net/en_US/sdk.js"></script>
         <script src="assets/js/check-facebook-login.js"></script>
 
         <!-- Searcher -->
         <script src="assets/js/search-getter.js"></script>
+
+        <script>
+            window.fbAsyncInit = function () {
+                searchGetter();
+            };
+        </script>
     </body>
 </html>
