--- a/list.html
+++ b/list.html
@@ -31,6 +31,8 @@
             </div>
         </div>
 
+        <div id="tester"></div>
+
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
