--- a/list.html
+++ b/list.html
@@ -47,6 +47,7 @@
 
         <script>
             window.fbAsyncInit = function () {
+                checkFacebookLogin();
                 searchGetter();
             };
         </script>
