--- a/vote.html
+++ b/vote.html
@@ -23,9 +23,27 @@
         <img class="center-block" src="assets/img/queue120.png">
 
         <div class="container">
-            <div class="row text-center show">
-                <div class="col-md-4"><img src="{{pageImage}}" alt="pageImage" class="img-rounded img-responsive"></div>
-                <div class="col-md-8">{{pageName}}</div>
+            <h3 class="text-center show botao">How is the waiting time?</h3>
+            <div class="row show">
+                <div class="radio">
+                    <label>
+                        <input type="radio" name="vote" id="option1" value="fast">
+                        Fast
+                    </label>
+                </div>
+                <div class="radio">
+                    <label>
+                        <input type="radio" name="vote" id="option2" value="medium">
+                        Medium
+                    </label>
+                </div>
+                <div class="radio">
+                    <label>
+                        <input type="radio" name="vote" id="option3" value="slow">
+                        Slow
+                    </label>
+                </div>
+                <button id="send" type="submit" class="btn btn-primary center-block botao">Send</button>
             </div>
         </div>
 
