centralizando o botao de login

--- a/login.html
+++ b/login.html
@@ -22,9 +22,11 @@
     <body>
         <img class="center-block" src="assets/img/queue120.png">
 
-        <div class="container center-block">
+        <div class="container">
+            <div class="center-block">
             <!-- fb login area -->
-            <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+            </div>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
