--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         <img class="center-block" src="assets/img/queue120.png">
 
         <div class="container">
-            <div class="text-center">
+            <div class="text-center botao">
             <!-- fb login area -->
                 <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
             </div>
