--- a/place.html
+++ b/place.html
@@ -24,15 +24,15 @@
 
         <div class="container">
             <div class="row text-center show">
-                <div class="col-md-4"><img src="{{pageImage}}" alt="pageImage" class="img-rounded img-responsive"></div>
-                <div class="col-md-8">{{pageName}}</div>
+                <div class="col-md-4 col-xs-6"><img src="{{pageImage}}" alt="pageImage" class="img-rounded img-responsive"></div>
+                <div class="col-md-8 col-xs-6">{{pageName}}</div>
             </div>
             <div class="row text-center show">
-                <div class="col-md-4">
+                <div class="col-md-4 col-xs-6">
                     <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                     x{{users}}
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 col-xs-6">
                     <div class="progress">
                         <div class="progress-bar progress-bar-{{barColor}} progress-bar-striped" role="progressbar" aria-valuenow="{{crowd}}" aria-valuemin="0" aria-valuemax="100" style="width: {{crowd}}%"></div>
                     </div>
