--- a/place.html
+++ b/place.html
@@ -23,7 +23,7 @@
         <img class="center-block" src="assets/img/queue120.png">
 
         <div class="container">
-            <div class="row text-center show">
+            <div class="row show">
                 <div class="col-md-4 col-xs-6"><img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xfa1/v/t1.0-1/p50x50/10462444_10154254792040548_5556635957554086513_n.jpg?oh=1c483c761b22c3132768485a41855e47&oe=56039140&__gda__=1439155657_53fabb72d59ceb14025a3ee14d31a44c" alt="pageImage" class="img-rounded img-responsive"></div>
                 <div class="col-md-8 col-xs-6 botao"><h4>Cinemark Eldorado</h4></div>
             </div>
