--- a/list.html
+++ b/list.html
@@ -47,8 +47,7 @@
 
         <script>
             window.fbAsyncInit = function () {
-                checkFacebookLogin();
-                searchGetter();
+                checkFacebookLogin(searchGetter);
             };
         </script>
     </body>
