--- a/list.html
+++ b/list.html
@@ -23,10 +23,10 @@
         <img class="center-block" src="assets/img/queue120.png">
 
         <div class="container show">
-            <div class="table table-striped">
-                <div class="row">
-                    <div class="col-md-4 col-xs-6">img url</div>
-                    <div class="col-md-8 col-xs-6">nome do treco</div>
+            <div id="outwrap" class="table table-striped">
+                <div id="template" class="row">
+                    <div class="col-md-4 col-xs-6"><img id="image" src=""></img></div>
+                    <div class="col-md-8 col-xs-6" id="name">nome do treco</div>
                 </div>
             </div>
         </div>
