--- a/list.html
+++ b/list.html
@@ -25,8 +25,8 @@
         <div class="container show">
             <div id="outwrap" class="table table-striped">
                 <div id="template" class="row">
-                    <div class="col-md-4 col-xs-6"><img id="image"></div>
-                    <div class="col-md-8 col-xs-6" id="name"></div>
+                    <div></div>
+                    <div></div>
                 </div>
             </div>
         </div>
