--- a/place.html
+++ b/place.html
@@ -30,7 +30,8 @@
             </div>
             <div class="row text-center show">
                 <div class="progress">
-                    <div id="progress" class="progress-bar progress-bar-{{color}} progress-bar-striped" role="progressbar" aria-valuenow="{{crowd}}" aria-valuemin="0" aria-valuemax="100" style="width: {{percent}}%"></div>
+                    <!-- aria-valuenow="valor" -->
+                    <div id="progress" class="progress-bar progress-bar-striped" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: {{percent}}%"></div>
                 </div>
             </div>
             <div class="row text-center show">
