colocando Parse no role

--- a/place.html
+++ b/place.html
@@ -55,6 +55,9 @@
         <script src="http://connect.facebook.net/en_US/sdk.js"></script>
         <script src="assets/js/check-facebook-login.js"></script>
 
+        <!-- Parse -->
+        <script src="http://www.parsecdn.com/js/parse-1.4.2.min.js"></script>
+
         <!-- Searcher -->
         <script src="assets/js/getPlace.js"></script>
         <script>
