Mensagem de carregamento

--- a/list.html
+++ b/list.html
@@ -21,12 +21,10 @@
     </head>
     <body>
         <img class="center-block" src="assets/img/queue120.png">
-
         <div class="container show">
+            <div id="status">Carregando...</div>
             <div id="outwrap" class="table table-striped">
-                <div id="template" class="row">
-                    
-                </div>
+                <div id="template" class="row"></div>
             </div>
         </div>
 
