--- a/place.html
+++ b/place.html
@@ -37,7 +37,7 @@
             <div class="row text-center show">
                 <div class="col-md-4 col-xs-6">
                     <span class="glyphicon glyphicon-user botao" aria-hidden="true"></span>
-                    x{{users}}
+                    x<span id="usr_count"></span>
                 </div>
                 <div class="col-md-8 col-xs-6">
                     <button type="button" class="btn btn-primary">Contribute</button>
