--- a/place.html
+++ b/place.html
@@ -40,7 +40,7 @@
                     x<span id="usr_count"></span>
                 </div>
                 <div class="col-md-8 col-xs-6">
-                    <button type="button" class="btn btn-primary">Contribute</button>
+                   <a href= "vote.html"><button type="button" class="btn btn-primary">Contribute</button></a>
                     
                 </div>
             </div>
