--- a/list.html
+++ b/list.html
@@ -22,7 +22,7 @@
     <body>
         <img class="center-block" src="assets/img/queue120.png">
         <div class="container show">
-            <div id="status">Carregando...</div>
+            <div id="status">Loading...</div>
             <div id="outwrap" class="table table-striped">
                 <div id="template" class="row"></div>
             </div>
