--- a/place.html
+++ b/place.html
@@ -26,7 +26,7 @@
             <div id="teste"></div>
             <div class="row show">
                 <div class="col-md-4 col-xs-4"><img src="" id="imagem" alt="pageImage" class="img-rounded img-responsive"></div>
-                <div class="col-md-8 col-xs-8 botao"><h4 id="place-name"></h4></div>
+                <div class="col-md-8 col-xs-8 botao"><h4 id="place-name">Loading...</h4></div>
             </div>
             <div class="row text-center show">
                 <div class="progress">
