--- a/vote.html
+++ b/vote.html
@@ -44,7 +44,8 @@
                     </label>
                 </div>
                 <button id="send" type="submit" class="btn btn-primary center-block botao">Send</button>
-            </div>
+             </div>
+             <input type="text" name="qpeople" class="form-control" placeholder="How many people are with you?" required autofocus>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
