--- a/place.html
+++ b/place.html
@@ -20,12 +20,11 @@
         <![endif]-->
     </head>
     <body>
-        <img class="center-block" src="assets/img/queue120.png">
+        <img class="center-block" id="imagem" src="assets/img/queue120.png">
 
         <div class="container">
             <div id="teste"></div>
             <div class="row show">
-                <div class="col-md-4 col-xs-4"><img src="" id="imagem" alt="pageImage" class="img-rounded img-responsive"></div>
                 <div class="col-md-8 col-xs-8 botao"><h4 id="place-name">Loading...</h4></div>
             </div>
             <div class="row text-center show">
