--- a/place.html
+++ b/place.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="col-md-8 col-xs-6">
                    <a href= "vote.html"><button type="button" class="btn btn-primary">Contribute</button></a>
-                    
+                   <a href= "home.html"><button type="button" class="btn btn-primary">Home</button></a>                   
                 </div>
             </div>
         </div>
