--- a/vote.html
+++ b/vote.html
@@ -44,8 +44,8 @@
                     </label>
                 </div>
                 <button id="send" type="submit" class="btn btn-primary center-block botao">Send</button>
+                <a href="home.html"><button type="button" class="btn btn-primary">Home</button></a>
              </div>
-             <input type="text" name="qpeople" class="form-control" placeholder="How many people are with you?" required autofocus>
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
